src/App.css
/* html{
  overflow: auto;
} */

html,
body,
#root,
.App {
  height: 100vh;
  width: 100vw;
  min-height: 600px;
  min-width: 400px;
  position: absolute;
  top: 0;
  overflow: hidden;
}

.app-header-and-body {
  height: 97vh;
  width: 100vw;
  margin: 0;
  overflow: auto;
 /* scroll-behavior: smooth; */
}

.app-header {
  width: 100vw;
  height: 20vh;
  min-height: 120px;
}

.app-body {
  width: 100vw;
  height: 80vh;
  display: flex;
  justify-content: center;
  align-items: center;
  bottom: 0;
  z-index: 10;
}

.form-input-field-container {
  display: flex;
  flex-direction: column;
  margin: 10px 0 10px 0;
}

.form-input-field {
  height: 30px;
}

.form-label {
  font-size: large;
  font-weight: bold;
}

.footer {
  position: absolute;
  top: 97%;
  display: flex;
  width: 100vw;
  z-index: 100;
  height: 3%;
  min-width: 400px
}

